Update Logistic Regression HM1.ipynb

--- a/Logistic Regression HM1.ipynb
+++ b/Logistic Regression HM1.ipynb
@@ -4,27 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color='Red'># Artifical Intelligence HM3</font>\n",
+    "# <font color='Red'># Artifical Intelligence</font>\n",
     "# Logistic Regression with a NN\n",
     "\n",
-    "This is an individual (required) programming assignment.\n",
-    "In this assignment you will build a logistic regression classifier to recognize  cats. \n",
-    "This assignment will step you through how to do this with a Neural Network.\n",
+    "This program will build a logistic regression classifier to recognize cats. \n",
     "\n",
-    "\n",
-    "<font color='Blue'># Students, please be aware that this homework is providing you multiple new useful elements associated with python, numpy, matplotlib, etc. You are strongly encouraged to dig deeper and learn from the sections of code that are given in each one of the cells.  </font>\n",
-    "\n",
-    "**Instructions:**\n",
-    "- Do not use loops (for/while) in your code, unless the instructions explicitly ask you to do so.\n",
-    "\n",
-    "**OBJECTIVES: You will learn to (THE HARD WAY):**\n",
-    "- Build the general architecture of a learning algorithm, including:\n",
-    "    - Initializing parameters\n",
-    "    - Calculating the cost function and its gradient\n",
-    "    - Using an optimization algorithm (gradient descent) \n",
-    "- Gather all three functions above into a main model function, in the right order.\n",
-    "- Practice Jupyter notebooks\n",
-    "- Reinforce the concepts and abstractions explained in class"
+    "\n"
    ]
   },
   {
