Update Logistic Regression HM1.ipynb

--- a/Logistic Regression HM1.ipynb
+++ b/Logistic Regression HM1.ipynb
@@ -165,11 +165,10 @@
     }
    ],
    "source": [
-    "### START CODE HERE ### (≈ 3 lines of code)\n",
+    "### We set the data here\n",
     "m_train = train_set_x_orig.shape[0]\n",
     "m_test =  test_set_x_orig.shape[0]\n",
     "num_px =  train_set_x_orig.shape[1]\n",
-    "### END CODE HERE ###\n",
     "\n",
     "print (\"Number of training examples: m_train = \" + str(m_train))\n",
     "print (\"Number of testing examples: m_test = \" + str(m_test))\n",
@@ -239,10 +238,8 @@
    "source": [
     "# Reshape the training and test examples\n",
     "\n",
-    "### START CODE HERE ### (≈ 2 lines of code)\n",
     "train_set_x_flatten = train_set_x_orig.reshape(train_set_x_orig.shape[0], -1).T\n",
     "test_set_x_flatten =  test_set_x_orig.reshape(test_set_x_orig.shape[0], -1).T\n",
-    "### END CODE HERE ###\n",
     "\n",
     "print (\"train_set_x_flatten shape: \" + str(train_set_x_flatten.shape))\n",
     "print (\"train_set_y shape: \" + str(train_set_y.shape))\n",
@@ -387,9 +384,7 @@
     "    s -- sigmoid(z)\n",
     "    \"\"\"\n",
     "\n",
-    "    ### START CODE HERE ### (≈ 1 line of code)\n",
     "    s = 1/(1+np.exp(-z))\n",
-    "    ### END CODE HERE ###\n",
     "    \n",
     "    return s"
    ]
@@ -456,10 +451,8 @@
     "    b -- initialized scalar (corresponds to the bias)\n",
     "    \"\"\"\n",
     "    \n",
-    "    ### START CODE HERE ### (≈ 1 line of code)\n",
     "    w = np.zeros((dim, 1))\n",
     "    b = 0\n",
-    "    ### END CODE HERE ###\n",
     "\n",
     "    assert(w.shape == (dim, 1))\n",
     "    assert(isinstance(b, float) or isinstance(b, int))\n",
@@ -567,17 +560,14 @@
     "    \n",
     "    \n",
     "    # FORWARD PROPAGATION (FROM X TO COST)\n",
-    "    ### START CODE HERE ### (≈ 2 lines of code)\n",
     "    \n",
+    "    # Activation Function: Sigmoid\n",
     "    A = sigmoid(np.dot(w.T,X) + b)\n",
     "    cost = -1/m * np.sum(Y*np.log(A)+(1-Y)*np.log(1-A))\n",
-    "    ### END CODE HERE ###\n",
     "    \n",
     "    # BACKWARD PROPAGATION (TO FIND GRAD)\n",
-    "    ### START CODE HERE ### (≈ 2 lines of code)\n",
     "    dw = 1/m * np.dot(X,(A-Y).T)\n",
     "    db = 1/m * np.sum(A-Y)\n",
-    "    ### END CODE HERE ###\n",
     "\n",
     "    assert(dw.shape == w.shape)\n",
     "    assert(db.dtype == float)\n",
@@ -655,8 +645,7 @@
     "- You have initialized your parameters.\n",
     "- You are also able to compute a cost function and its gradient.\n",
     "- Now, you want to update the parameters using gradient descent.\n",
-    "\n",
-    "**Exercise:** Write down the optimization function. The goal is to learn $w$ and $b$ by minimizing the cost function $J$. For a parameter $\\theta$, the update rule is $ \\theta = \\theta - \\alpha \\text{ } d\\theta$, where $\\alpha$ is the learning rate."
+    "\n"
    ]
   },
   {
@@ -697,19 +686,15 @@
     "        \n",
     "        \n",
     "        # Cost and gradient calculation (≈ 1-4 lines of code)\n",
-    "        ### START CODE HERE ### \n",
     "        grads, cost = propagate(w,b,X,Y)\n",
-    "        ### END CODE HERE ###\n",
     "        \n",
     "        # Retrieve derivatives from grads\n",
     "        dw = grads[\"dw\"]\n",
     "        db = grads[\"db\"]\n",
     "        \n",
     "        # update rule (≈ 2 lines of code)\n",
-    "        ### START CODE HERE ###     \n",
     "        w = w - dw*learning_rate\n",
     "        b = b - db*learning_rate\n",
-    "        ### END CODE HERE ###\n",
     "        \n",
     "        # Record the costs\n",
     "        if i % 100 == 0:\n",
@@ -822,19 +807,15 @@
     "    w = w.reshape(X.shape[0], 1)\n",
     "    \n",
     "    # Compute vector \"A\" predicting the probabilities of a cat being present in the picture\n",
-    "    ### START CODE HERE ### (≈ 1 line of code)\n",
     "    A = sigmoid(np.dot(w.T,X) + b)\n",
-    "    ### END CODE HERE ###\n",
     "    \n",
     "    for i in range(A.shape[1]):\n",
     "        \n",
     "        # Convert probabilities A[0,i] to actual predictions p[0,i]\n",
-    "        ### START CODE HERE ### (≈ 4 lines of code) \n",
     "        if(A[0][i] <= 0.5):\n",
     "            Y_prediction[0][i] = 0\n",
     "        else:\n",
     "            Y_prediction[0][i] = 1\n",
-    "        ### END CODE HERE ###\n",
     "    \n",
     "    assert(Y_prediction.shape == (1, m))\n",
     "    \n",
@@ -935,7 +916,6 @@
     "    d -- dictionary containing information about the model.\n",
     "    \"\"\"\n",
     "    \n",
-    "    ### START CODE HERE ###\n",
     "    # initialize parameters with zeros (≈ 1 line of code)\n",
     "    w, b = initialize_with_zeros(X_train.shape[0])\n",
     "\n",
@@ -950,9 +930,7 @@
     "    Y_prediction_test = predict(w, b,X_test)\n",
     "    Y_prediction_train = predict(w,b,X_train)\n",
     "\n",
-    "    ### END CODE HERE ###\n",
     "\n",
-    "    # Print train/test Errors\n",
     "    print(\"train accuracy: {} %\".format(100 - np.mean(np.abs(Y_prediction_train - Y_train)) * 100))\n",
     "    print(\"test accuracy: {} %\".format(100 - np.mean(np.abs(Y_prediction_test - Y_test)) * 100))\n",
     "\n",
@@ -1049,7 +1027,7 @@
     "collapsed": true
    },
    "source": [
-    "**Comment**: Training accuracy is close to 100%. This is a good sanity check: your model is working and has high enough capacity to fit the training data. Test error is 68%. It is actually not bad for this simple model, given the small dataset we used and that logistic regression is a linear classifier. But no worries, you'll learn how to build an even better classifier (in the near future, several lectures from now).\n",
+    "**Comment**: Training accuracy is close to 100%. This is a good sanity check.\n",
     "\n",
     "Using the code below (and changing the `index` variable) you can look at predictions on pictures of the test set."
    ]
